http://l2jfree-users.com/l2jfreeusers/posts/list/580.page
git-svn-id: http://svn.l2jfree.com/l2jfree@7975 6ff00ba9-25cd-4355-987e-099c62bc2628